Finish the workclass